src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #ffffff;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

@font-face {
  font-family: inter_eduventure;
  src: url(./assets/Fonts/Inter-VariableFont_slnt\,wght.ttf);
}

@font-face {
  font-family: Kufam_eduventure;
  src: url(./assets/Fonts/Kufam-VariableFont_wght.ttf);
}
.platebox {
  height: 840px;
  width: 700px;
  background-color: #ffffff;
  background-image: url(./assets/imgs/Decoratives/plateBackground.png);
  border-radius: 10px;
  margin-left: 55%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: default;
}

.inputForm {
  height: 50px;
  width: 600px;
  padding: 5px 5px 5px 10px;
  font-family: inter_eduventure;
  font-weight: 500;
  font-size: 18pt;
  border-radius: 5px;
  margin-left: 50px;
  background-color: #ECECEC;
  color: #000033;
  border: none;
  outline: none;
  box-shadow: none
}

.inputFormFalse {
  height: 50px;
  width: 600px;
  padding: 5px 5px 5px 10px;
  font-family: inter_eduventure;
  font-weight: 500;
  font-size: 18pt;
  border-radius: 5px;
  margin-left: 50px;
  background-color: #ECECEC;
  color: #000033;
  border: none;
  outline: 2px red solid;
  box-shadow: none
}

.dateInput {
  height: 50px;
  padding: 5px 5px 5px 10px;
  font-family: inter_eduventure;
  font-weight: 500;
  font-size: 18pt;
  border-radius: 5px;
  background-color: #ECECEC;
  color: #000033;
  border: none;
  outline: none;
  box-shadow: none
}

.proceedbtn {
  height: 120px;
  width: 120px;
  background-color: #66CCCC;
  color: #000033;
  border-radius: 33px;
  transition: all 0.2s ease-in;
  border: none;
  outline: none;
  box-shadow: none
}

.proceedbtn:hover {
  height: 120px;
  width: 120px;
  background-color: #ADFFFF;
  cursor: pointer
}

.SignUpdev {
  background-color: #FF3399;
  background-image: url(./assets/imgs/Decoratives/Vector\ 1.svg);
  background-position: center;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.LogIndev {
  background-color: #FF3399;
  background-image: url(./assets/imgs/Decoratives/Vector\ 2.svg);
  background-position: center;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}
.socialmedia {
  display: flex;
  gap: 2rem;
  margin-top: 1rem;
  width: fit-content;
  padding: 0;
  margin: auto;
}

.socialmedia li {
  list-style: none;
  margin-top: 2rem;
}


.SettingsBtn {
  width: 90px;
  height: 90px;
  background-color: #000033;
  border-radius: 20px;
  transition: all 100ms ease-in-out;
}

.SettingsBtn:hover {
  background-color: #FF3399;
}

.profilePicNavBarcontainer {
  width: 90px;
  height: 90px;
  background-color: #FFFFFF;
  border-radius: 90px;
  transition: all 300ms ease-in-out;
  overflow: hidden;
  display: flex;
}

.userImgNavBar {
  width: 100%;
}

.userImgNavBar:hover {
  opacity: 75%;

}

